Simpler fix for ARROW-6861